--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(hello_avx main.cpp)
 
+include_directories(Common)
+
 add_subdirectory(Ch01)
+add_subdirectory(Ch02)
